<resources>
    <string name="app_name">DaggerExample</string>
    <string name="save">save to pref</string>
    <string name="string_from_preferences">string from preferences</string>
    <string name="string_from_retrofit">string from retrofit</string>
    <string name="load">load from pref</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="click_burger_to_open_menu">Click Burger to open menu</string>
    <string name="example_fragment">Example Fragment</string>
    <string name="preferences_module">Preferences Module</string>
    <string name="network_module">Network Module</string>
    <string name="start_fragment">Start Fragment</string>
    <string name="load_from_web">load</string>
    <string name="touch_fragment">Touch Fragment</string>
    <string name="multi_touch_fragment">Multi Touch Fragment</string>
    <string name="сoordinates">Сoordinates</string>
    <string name="сoordinates_value">%s %s %s %s %s</string>
    <string name="swipe_fragment">Swipe Fragment</string>
    <string name="DataStorePrefs">DataStorePref</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
</resources>
