<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Item's IDs and Navigation Graph's IDs must be the same-->

    <item
        android:id="@+id/fragment1"
        android:title="@string/start_fragment" />

    <item
        android:id="@+id/fragment_network_module"
        android:title="@string/network_module" />

    <item
        android:id="@+id/fragment_preferences_module"
        android:title="@string/preferences_module" />

    <item
        android:id="@+id/fragment_touch"
        android:title="@string/touch_fragment"/>

    <item
        android:id="@+id/fragment_multi_touch"
        android:title="@string/multi_touch_fragment"/>

    <item
        android:id="@+id/fragment_main_swipe"
        android:title="@string/swipe_fragment"/>

</menu>